# netops-mcp

./: .gitignore  Dockerfile  QUICKSTART_PRODUCTION.md  README.md  README.tr.md  SECURITY.md  docker-compose.yml  env.production.example  pyproject.toml  requirements-dev.in  requirements.in  start_http_server.sh  test_all_tools.py
.github/workflows/: lint.yml  release.yml  security.yml  test.yml
config/: config.example.json  config.json
docs/: API_AUTHENTICATION.md  PRODUCTION_DEPLOYMENT.md
examples/: cursor_mcp_config.json
scripts/: generate_api_key.py
src/netops_mcp/: __init__.py  server.py  server_http.py
src/netops_mcp/config/: loader.py  models.py
src/netops_mcp/core/: logging.py
src/netops_mcp/formatting/: __init__.py  data_converter.py  output_parser.py  response_formatter.py
src/netops_mcp/middleware/: __init__.py  auth.py  metrics.py  rate_limiter.py
src/netops_mcp/tools/: __init__.py  base.py
src/netops_mcp/tools/network/: __init__.py  connectivity_tools.py  discovery_tools.py  dns_tools.py  http_tools.py
src/netops_mcp/tools/security/: __init__.py  scanning_tools.py
src/netops_mcp/tools/system/: __init__.py  monitoring_tools.py  network_tools.py
src/netops_mcp/utils/: system_check.py
src/netops_mcp/validators/: __init__.py  input_validator.py
test_scripts/: test_http_client.py  test_http_server.py  test_mcp_client.py  test_simple.py
tests/: conftest.py  test_basic.py  test_config.py  test_connectivity_tools.py  test_discovery_tools.py  test_dns_tools.py  test_http_tools.py  test_logging.py  test_monitoring_tools.py  test_network_tools.py  test_scanning_tools.py  test_server.py  test_server_http.py  test_system_check.py  test_tools.py
